# ecal-core

./: .gitignore  .gitmodules  CMakeLists.txt  DEPENDENCIES.txt  NOTICE.txt  README.md  cpack_config.cmake  submodule_dependencies.cmake
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-macos.yml  build-ubuntu-20.yml  build-ubuntu-22-capnproto.yml  build-ubuntu-22-iceoryx.yml  build-ubuntu-22.yml  build-ubuntu.yml  build-windows.yml  clang-tidy-review-post-comments.yml  clang-tidy-review.yml
cmake/Modules/: FindNpcap.cmake  FindPcapPlusPlus.cmake
cmake/helper_functions/: ecal_add_functions.cmake  ecal_install_functions.cmake
contrib/ecaltime/: CMakeLists.txt
contrib/ecaltime/linuxptp/src/: ecal_time_linuxptp.cpp
cpack/: cpack_config.cmake  cpack_variables.cmake
cpack/innosetup/: ecal_setup.iss.in
ecal/: CMakeLists.txt
ecal/core/: CMakeLists.txt
ecal/core/include/ecal/: ecal_publisher.h  ecal_publisher_config.h  ecal_util.h
ecal/core/include/ecal/config/: configuration.h
ecal/core/include/ecal/msg/: publisher.h
ecal/core/src/: ecal.cpp  ecal_descgate.cpp  ecal_descgate.h  ecal_process.cpp  ecal_util.cpp
ecal/core/src/cimpl/: ecal_c_common.cpp  ecal_c_common.h  ecal_client_cimpl.cpp  ecal_core_cimpl.cpp  ecal_monitoring_cimpl.cpp  ecal_process_cimpl.cpp  ecal_publisher_cimpl.cpp  ecal_server_cimpl.cpp  ecal_subscriber_cimpl.cpp  ecal_time_cimpl.cpp  ecal_timer_cimpl.cpp  ecal_util_cimpl.cpp
ecal/core/src/config/: ecal_config.cpp  ecal_config_initializer.cpp
ecal/core/src/io/udp/: ecal_udp_receiver_attr.h  ecal_udp_sample_receiver.cpp  ecal_udp_sample_receiver.h  ecal_udp_sample_receiver_asio.cpp  ecal_udp_sample_receiver_asio.h  (+5 more)
ecal/core/src/pubsub/: ecal_publisher.cpp  ecal_subgate.cpp
ecal/core/src/readwrite/: ecal_reader.cpp  ecal_reader.h  ecal_writer.cpp  ecal_writer.h
ecal/core/src/registration/: ecal_registration_provider.cpp  ecal_registration_provider.h  ecal_registration_receiver.cpp
ecal/core/src/serialization/: ecal_serialize_common.cpp  ecal_serialize_sample_registration.cpp  ecal_struct_sample_registration.h
ecal/core/src/service/: ecal_clientgate.cpp  ecal_service_client_impl.cpp  ecal_service_server_impl.cpp  ecal_service_singleton_manager.cpp
ecal/core_pb/: CMakeLists.txt
ecal/protobuf/: ecal.proto  topic.proto
ecal/samples/: CMakeLists.txt
ecal/service/ecal_service/src/: client_manager.cpp  client_session.cpp  client_session_impl_base.h  client_session_impl_v0.cpp  client_session_impl_v0.h  client_session_impl_v1.cpp  client_session_impl_v1.h  log_defs.h  protocol_v0.cpp  protocol_v1.cpp  server.cpp  server_impl.cpp  server_impl.h  server_manager.cpp  server_session_impl_base.h  server_session_impl_v0.cpp  server_session_impl_v0.h  server_session_impl_v1.cpp  server_session_impl_v1.h
ecal/service/samples/sample_server/: CMakeLists.txt
ecal/service/samples/sample_standalone/: CMakeLists.txt
ecal/service/test/: CMakeLists.txt
ecal/service/test/src/: ecal_tcp_service_test.cpp
ecal/tests/: CMakeLists.txt
ecal/tests/cpp/config_test/: CMakeLists.txt
ecal/tests/cpp/pubsub_test/: CMakeLists.txt
ecal/tests/cpp/registration_test_public/: CMakeLists.txt
ecal/tests/cpp/serialization_test/: CMakeLists.txt
ecal/tests/event_test/: CMakeLists.txt
ecal/tests/io_memfile_test/: CMakeLists.txt
ecal/tests/serialization_test/: CMakeLists.txt
ecal/time/linuxptp/src/: ecaltime.cpp
ecal/time/localtime/: CMakeLists.txt
ecal/time/localtime/src/: ecaltime.cpp
ecal/utils/include/ecal_utils/: string.h
install/: cpack_config.cmake
lib/ecal_protobuf/: CMakeLists.txt
samples/: CMakeLists.txt
samples/cpp/benchmarks/latency_snd/src/: latency_snd.cpp
samples/cpp/benchmarks/performance_snd/src/: performance_snd.cpp
samples/cpp/latency/latency_snd/: CMakeLists.txt
samples/cpp/monitoring/monitoring_get_topics/src/: monitoring_get_topics.cpp
samples/cpp/monitoring/monitoring_performance/: CMakeLists.txt
samples/cpp/monitoring/monitoring_performance/src/: monitoring_performance.cpp
samples/cpp/monitoring/monitoring_rec/: CMakeLists.txt
samples/cpp/monitoring/monitoring_rec/src/: monitoring_rec.cpp
samples/cpp/monitoring/monitoring_reg/: CMakeLists.txt
samples/cpp/monitoring/monitoring_reg/src/: monitoring_reg.cpp
samples/cpp/monitoring/monitoring_reg/src/protobuf/: ecal.proto
samples/cpp/pubsub/protobuf/proto_dyn_json_rec/: CMakeLists.txt
samples/cpp/pubsub/protobuf/proto_dyn_rec/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/ecal/: ecal_publisher.h  ecal_subscriber.h
src/core/src/: ecal_clang.cpp
src/core/src/config/: ecal_config_reader.cpp
src/core/src/monitoring/: ecal_monitoring_impl.cpp
src/core/src/pubsub/: ecal_pubgate.cpp  ecal_publisher.cpp  ecal_subgate.cpp  ecal_subscriber.cpp
src/core/src/readwrite/: ecal_reader.cpp
src/core/src/registration/: ecal_registration_provider.cpp
src/core/src/service/: ecal_clientgate.cpp  ecal_service_server_impl.cpp
src/service/ecal_service/: CMakeLists.txt
src/service/sample/: CMakeLists.txt
src/service/test/: CMakeLists.txt
src/time/: CMakeLists.txt
src/time/linuxptp/: CMakeLists.txt
src/time/linuxptp/src/: ecal_time_linuxptp.h
src/time/localtime/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/include/ecal_utils/: ecal_utils.h  filesystem.h
src/utils/src/: filesystem.cpp
testing/ecal/clientserver_test/src/: clientserver_test.cpp
tests/: CMakeLists.txt
tests/clientserver_proto_test/: CMakeLists.txt
tests/clientserver_test/: CMakeLists.txt
tests/clientserver_test/src/: clientserver_test.cpp
tests/core_test/: CMakeLists.txt
tests/event_test/: CMakeLists.txt
tests/expmap_test/: CMakeLists.txt
tests/io_memfile_test/: CMakeLists.txt
tests/pubsub_proto_test/: CMakeLists.txt
tests/pubsub_test/: CMakeLists.txt
tests/pubsub_test/src/: pubsub_gettopics.cpp
tests/serialization_test/: CMakeLists.txt
tests/serialization_test/src/: registration_generate.cpp
tests/topic2mcast_test/: CMakeLists.txt
tests/util_test/: CMakeLists.txt
(+49 files in other folders)
